--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 </head>
 <html>
-
+<title>Welcome! | Chris Mikhail</title>
 <body>
     <nav>
         <div id="name" class="navbar-sections">
