added new pages and icons

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <script src="https://kit.fontawesome.com/6cfa9da1e4.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
 </head>
 <html>
 <title>Welcome! | Chris Mikhail</title>
 <body>
     <nav>
         <div id="name" class="navbar-sections">
-            <a href="#">Chris Mikhail</a>
+            <a href="index.html">Chris Mikhail</a>
         </div>
         <div id="about-projects" class="navbar-sections">
-            <a href="#">About</a>
-            <a href="#">Projects</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
             <a href="#">CV</a>
         </div>
         <div id="links" class="navbar-sections">
