--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
 </head>
 <html>
-<title>Welcome! | Chris Mikhail</title>
+<title>About | Chris Mikhail</title>
 
 <body>
     <nav>
@@ -28,6 +28,40 @@
             <a href="https://github.com/ChrisMikhail" class="fa-brands fa-github" target="_blank"></a>
         </div>
     </nav>
+
+    <main class="main-about">
+        <h1>Hey there!</h1>
+        <p class="about-p">Nice to meet you - and thanks for visiting my website! Currently,
+            I am studying Computer Science at Toronto Metropolitan University. My main interest is
+            building fun projects that can be used through the web. When I'm not coding, I'm playing videogames,
+            watching anime, studying or hanging out with friends!
+            Some topics that I would love to learn more
+            about are computer vision, AI and robotics!
+        </p>
+        <p class="about-p">
+            Currently, my favourite programming languages are Python, Java and Javascript.
+        </p>
+        <p class="about-p">
+            Feel free to reach out to me on <a href="https://www.linkedin.com/in/christophermikhail/"
+                target="_blank">Linkedin</a>
+            or email me at <a href="mailto:samuelmikhc@gmail.com" target="_blank">samuelmikhc@gmail.com</a>, and I'll
+            make sure to respond as soon as possible!
+        </p>
+        <p class="about-p">
+            Since you're here, come check out some of my projects below!
+        </p>
+        <p class="about-p">
+            Chris M.
+        </p>
+        <p class="about-p">
+            <button id="about-projbtn" class="projects-button" href="projects.html">Projects</button>
+        </p>
+        <p class="about-p">
+            <br><br>
+        </p>
+    </main>
+
+
     <script src="script.js"></script>
 </body>
 
