--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
 </head>
 <html>
-<title>Welcome! | Chris Mikhail</title>
+<title>Projects | Chris Mikhail</title>
 
 <body>
     <nav>
