--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="center">
             <p><span class="typed"></span></p>
         </div>
-        <a class="projects-button" href="#">Projects</a>
+        <a class="projects-button" href="projects.html">Projects</a>
     </main>
     <!-- <footer>
         <span><p class="fa-regular fa-copyright"></p> Chris Mikhail, 2023</span>
