updated projects buttons

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             Chris M.
         </p>
         <p class="about-p">
-            <button id="about-projbtn" class="projects-button" href="projects.html">Projects</button>
+            <a id="about-projbtn" class="projects-button" href="projects.html">Projects</a>
         </p>
         <p class="about-p">
             <br><br>
