--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <html>
 <title>Welcome! | Chris Mikhail</title>
+
 <body>
+    <div id="tsparticles"></div>
     <nav>
         <div id="name" class="navbar-sections">
             <a href="index.html">Chris Mikhail</a>
