--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,37 @@
             <a href="https://github.com/ChrisMikhail" class="fa-brands fa-github" target="_blank"></a>
         </div>
     </nav>
+
+
+    <main>
+        <h1>My Projects</h1>
+
+        <div class="grid-container">
+
+            <a class="projects-grid" href="https://github.com/sjingoi/ai-discord-bot" target="_blank">GPTBot</a>
+
+            <a href="https://github.com/ChrisMikhail/League-webscraper" class="projects-grid" target="_blank">Web Scraper</a>
+
+            <a href="https://github.com/ChrisMikhail/chrismikhail.github.io" class="projects-grid" target="_blank">Personal Website</a>
+
+            <a href="https://github.com/ChrisMikhail/Simple-Calculator" class="projects-grid" target="_blank">Calculator</a>
+
+            <!-- <a href="#">
+                <div class="projects-grid">see</div>
+            </a>
+            <a href="#">
+                <div class="projects-grid">here</div>
+            </a> -->
+            <!-- <a href="#">
+                <div class="projects-grid">here</div>
+            </a>
+            <a href="#">
+                <div class="projects-grid">YET</div>
+            </a> -->
+        </div>
+
+    </main>
+
     <script src="script.js"></script>
 </body>
 
