--- a/projects.html
+++ b/projects.html
@@ -35,13 +35,22 @@
 
         <div class="grid-container">
 
-            <a class="projects-grid" href="https://github.com/sjingoi/ai-discord-bot" target="_blank">GPTBot</a>
+            <a class="projects-grid" href="https://github.com/sjingoi/ai-discord-bot" target="_blank">
+                <div>GPTBot</div>
+            </a>
+            <a href="https://github.com/ChrisMikhail/League-webscraper" class="projects-grid" target="_blank">
+                <div>Web Scraper</div>
+            </a>
 
-            <a href="https://github.com/ChrisMikhail/League-webscraper" class="projects-grid" target="_blank">Web Scraper</a>
+            <a href="https://github.com/ChrisMikhail/chrismikhail.github.io" class="projects-grid"
+                target="_blank">
+                <div>Personal Website</div>
+            </a>
 
-            <a href="https://github.com/ChrisMikhail/chrismikhail.github.io" class="projects-grid" target="_blank">Personal Website</a>
-
-            <a href="https://github.com/ChrisMikhail/Simple-Calculator" class="projects-grid" target="_blank">Calculator</a>
+            <a href="https://github.com/ChrisMikhail/Simple-Calculator" class="projects-grid"
+                target="_blank">
+                <div>Calculator</div>
+            </a>
 
             <!-- <a href="#">
                 <div class="projects-grid">see</div>
