Changes header and added images

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             about are computer vision, AI and robotics!
         </p>
         <p class="about-p">
-            Currently, my favourite programming languages are Python, Java and Javascript.
+            As of right now, my favourite programming languages are Python, Java and Javascript.
         </p>
         <p class="about-p">
             Feel free to reach out to me on <a href="https://www.linkedin.com/in/christophermikhail/"
