--- a/index.html
+++ b/index.html
@@ -32,16 +32,13 @@
 
     <main>
         <div class="greet">
-            <h1>Hi, I'm Chris Mikhail.</h1>
+            <h1><span class="typed"></span></h1>
         </div>
         <div class="center">
-            <p><span class="typed"></span></p>
+            <p><span>Click below to check me out!</span></p>
         </div>
         <a class="projects-button" href="projects.html">Projects</a>
     </main>
-    <!-- <footer>
-        <span><p class="fa-regular fa-copyright"></p> Chris Mikhail, 2023</span>
-    </footer> -->
 
     <script src="script.js"></script>
 </body>
