--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/6cfa9da1e4.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png">
 </head>
 <html>
 <title>Projects | Chris Mikhail</title>
@@ -35,35 +35,23 @@
 
         <div class="grid-container">
 
-            <a class="projects-grid" href="https://github.com/sjingoi/ai-discord-bot" target="_blank">
+            <a class="projects-grid" href="https://github.com/sjingoi/ai-discord-bot" target="_blank" id="gptbot">
                 <div>GPTBot</div>
             </a>
-            <a href="https://github.com/ChrisMikhail/League-webscraper" class="projects-grid" target="_blank">
+            <a href="https://github.com/ChrisMikhail/League-webscraper" class="projects-grid" target="_blank" id="webscraper">
                 <div>Web Scraper</div>
             </a>
 
-            <a href="https://github.com/ChrisMikhail/chrismikhail.github.io" class="projects-grid"
-                target="_blank">
-                <div>Personal Website</div>
+            <a href="https://github.com/ChrisMikhail/hpsa-website" class="projects-grid"
+                target="_blank" id="hpsa">
+                <div>HPSA Website</div>
             </a>
 
             <a href="https://github.com/ChrisMikhail/Simple-Calculator" class="projects-grid"
-                target="_blank">
+                target="_blank" id="calculator">
                 <div>Calculator</div>
             </a>
 
-            <!-- <a href="#">
-                <div class="projects-grid">see</div>
-            </a>
-            <a href="#">
-                <div class="projects-grid">here</div>
-            </a> -->
-            <!-- <a href="#">
-                <div class="projects-grid">here</div>
-            </a>
-            <a href="#">
-                <div class="projects-grid">YET</div>
-            </a> -->
         </div>
 
     </main>
