--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/6cfa9da1e4.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png">
 </head>
 <html>
 <title>About | Chris Mikhail</title>
