added CV section

--- a/CV.html
+++ b/CV.html
@@ -10,9 +10,10 @@
     <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png">
 </head>
 <html>
-<title>Projects | Chris Mikhail</title>
+<title>Welcome! | Chris Mikhail</title>
 
 <body>
+    <div id="tsparticles"></div>
     <nav>
         <div id="name" class="navbar-sections">
             <a href="index.html">Chris Mikhail</a>
@@ -29,31 +30,9 @@
         </div>
     </nav>
 
-
-    <main>
-        <h1>My Projects</h1>
-
-        <div class="grid-container">
-
-            <a class="projects-grid" href="https://github.com/sjingoi/ai-discord-bot" target="_blank" id="gptbot">
-                <div>GPTBot</div>
-            </a>
-            <a href="https://github.com/ChrisMikhail/League-webscraper" class="projects-grid" target="_blank" id="webscraper">
-                <div>Web Scraper</div>
-            </a>
-
-            <a href="https://github.com/ChrisMikhail/hpsa-website" class="projects-grid"
-                target="_blank" id="hpsa">
-                <div>HPSA Website</div>
-            </a>
-
-            <a href="https://github.com/ChrisMikhail/Simple-Calculator" class="projects-grid"
-                target="_blank" id="calculator">
-                <div>Calculator</div>
-            </a>
-
-        </div>
-
+    <main class="CV-main">
+        <img src="images/cv-image" class="cv">
+        <p class="download-cv">Download the PDF <a href="images/Chris-Mikhail-CV.pdf" target="_blank">here!</a></p>
     </main>
 
     <script src="script.js"></script>
