--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div id="about-projects" class="navbar-sections">
             <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
-            <a href="#">CV</a>
+            <a href="CV.html">CV</a>
         </div>
         <div id="links" class="navbar-sections">
             <a href="https://www.linkedin.com/in/christophermikhail/" class="fa-brands fa-linkedin" target="_blank"></a>
-            <a href="mailto:samuelmikhc@gmail.com" class="fa-solid fa-envelope"></a>
+            <a href="mailto:chris.mikhail@torontomu.ca" class="fa-solid fa-envelope"></a>
             <a href="https://github.com/ChrisMikhail" class="fa-brands fa-github" target="_blank"></a>
         </div>
     </nav>
