--- a/CV.html
+++ b/CV.html
@@ -31,7 +31,7 @@
     </nav>
 
     <main class="CV-main">
-        <img src="images/cv-image" class="cv">
+        <img src="images/cv-image.png" class="cv">
         <p class="download-cv">Download the PDF <a href="images/Chris-Mikhail-CV.pdf" target="_blank">here!</a></p>
     </main>
 
