updated about section

--- a/about.html
+++ b/about.html
@@ -32,11 +32,11 @@
     <main class="main-about">
         <h1>Hey there!</h1>
         <p class="about-p">Nice to meet you - and thanks for visiting my website! Currently,
-            I am studying Computer Science at Toronto Metropolitan University. My main interest is
+            I am studying Computer Science at Toronto Metropolitan University, along with a minor in Cybersecurity. Currently, my main interest is
             building fun projects that can be used through the web. When I'm not coding, I'm playing videogames,
             watching anime, studying or hanging out with friends!
             Some topics that I would love to learn more
-            about are computer vision, AI and robotics!
+            about are cybersecurity, computer vision, AI and robotics!
         </p>
         <p class="about-p">
             As of right now, my favourite programming languages are Python, Java and Javascript.
