updated projects section

--- a/projects.html
+++ b/projects.html
@@ -47,9 +47,9 @@
                 <div>HPSA Website</div>
             </a>
 
-            <a href="https://github.com/ChrisMikhail/Simple-Calculator" class="projects-grid"
-                target="_blank" id="calculator">
-                <div>Calculator</div>
+            <a href="https://github.com/ChrisMikhail/pantry-pal" class="projects-grid"
+                target="_blank" id="pantry">
+                <div>PantryPal</div>
             </a>
 
         </div>
