--- a/CV.html
+++ b/CV.html
@@ -25,7 +25,7 @@
         </div>
         <div id="links" class="navbar-sections">
             <a href="https://www.linkedin.com/in/christophermikhail/" class="fa-brands fa-linkedin" target="_blank"></a>
-            <a href="mailto:chris.mikhail@torontomu.ca" class="fa-solid fa-envelope"></a>
+            <a href="mailto:chrismikhail04@gmail.com" class="fa-solid fa-envelope"></a>
             <a href="https://github.com/ChrisMikhail" class="fa-brands fa-github" target="_blank"></a>
         </div>
     </nav>
