--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </div>
         <div id="links" class="navbar-sections">
             <a href="https://www.linkedin.com/in/christophermikhail/" class="fa-brands fa-linkedin" target="_blank"></a>
-            <a href="mailto:chris.mikhail@torontomu.ca" class="fa-solid fa-envelope"></a>
+            <a href="mailto:chrismikhail04@gmail.com" class="fa-solid fa-envelope"></a>
             <a href="https://github.com/ChrisMikhail" class="fa-brands fa-github" target="_blank"></a>
         </div>
     </nav>
@@ -44,7 +44,7 @@
         <p class="about-p">
             Feel free to reach out to me on <a href="https://www.linkedin.com/in/christophermikhail/"
                 target="_blank">Linkedin</a>
-            or email me at <a href="mailto:samuelmikhc@gmail.com" target="_blank">samuelmikhc@gmail.com</a>, and I'll
+            or email me at <a href="mailto:chrismikhail04@gmail.com" target="_blank">chrismikhail04@gmail.com</a>, and I'll
             make sure to respond as soon as possible!
         </p>
         <p class="about-p">
