fixed bug where cv section couldnt be accessed from about

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <div id="about-projects" class="navbar-sections">
             <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
-            <a href="#">CV</a>
+            <a href="CV.html">CV</a>
         </div>
         <div id="links" class="navbar-sections">
             <a href="https://www.linkedin.com/in/christophermikhail/" class="fa-brands fa-linkedin" target="_blank"></a>
