updated resume, about, and projects section

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             building fun projects that can be used through the web. When I'm not coding, I'm playing videogames,
             watching anime, studying or hanging out with friends!
             Some topics that I would love to learn more
-            about are cybersecurity, computer vision, AI and robotics!
+            about are cybersecurity, cloud computing, AI and web development!
         </p>
         <p class="about-p">
             As of right now, my favourite programming languages are Python, Java and Javascript.
